# TDA

./: .gitignore
SumaDinamica/: CMakeLists.txt
SumaDinamica/include/: sumset_sum.hpp
SumaDinamica/src/: main.cpp
SumaDinamica/src/subset_sum/: subset_sum_bottomup.cpp
backtracking/bst_optimo/: bst_optimo.cpp
backtracking/magicuadrados/: CMakeLists.txt  README.md
backtracking/magicuadrados/include/: magicuadrados.h
backtracking/magicuadrados/src/: magicuadrados.cpp
backtracking/magicuadrados/tests/: tests_magic.cpp
backtracking/ruta_minima/: CMakeLists.txt  main.cpp
dp/: main.cpp
dp/astro_trade/: astro_trade.cpp  main.cpp
dp/king_army/: king_army.cpp
dp/optipagos/: main.cpp
dp/suma_dinamica/: CMakeLists.txt
dp/suma_dinamica/src/: main.cpp
dp/suma_dinamica/src/subset_sum/: backtraking.cpp  subset_sum_topdown.cpp
dp/suma_dinamica/tests/: subset_sum_test.cpp
dp/vacations/: vacations  vacations.cpp
dyc/indice_espejo/: main.cpp
dyc/potencia_logaritmica/: main.cpp
greedy/sumaGolosa/: CMakeLists.txt
greedy/sumaGolosa/src/: main.cpp
greedy/sumaSelectiva/: CMakeLists.txt
greedy/sumaSelectiva/src/: main.cpp
guias/practicaAGM/: practicaAGM.aux  practicaAGM.fdb_latexmk  practicaAGM.fls  practicaAGM.tex
implementaciones_grafos/recorridos/: find_puentes.cpp
jam/: CMakeLists.txt  dfs.cpp  main.cpp
jam/include/: bellmanford.h  dfs.h  grafo.h  grafo_ponderado.h  igrafo.h  igrafo_ponderado.h  types.h
jam/src/: dfs.cpp  grafo.cpp  grafo_ponderado.cpp  main.cpp
magicuadrados/: CMakeLists.txt  README.md
magicuadrados/include/: magicuadrados.h
magicuadrados/src/: magicuadrados.cpp  main.cpp
magicuadrados/tests/: tests_magic.cpp
tp/CambiandoseDeAula/: CMakeLists.txt  README.md
tp/CambiandoseDeAula/src/: main.cpp
tp/CambiandoseDeAula/tests/: tests_main.cpp
tp/Hilocomunicados/: CMakeLists.txt  README.md
tp/Hilocomunicados/src/: main.cpp
tp/Hilocomunicados/tests/: tests_hilo.cpp
tp/ale_1s/: CMakeLists.txt  README.md  main.cpp
tp/alfabeticamente/: README.md  alfabeticamente.cpp  alfabeticamente_bottum_up.cpp  alfabeticamente_bt.cpp  alfabeticamente_top_down.cpp  main.cpp  solucion.cpp
tp/b_convertibilidad/: CMakeLists.txt  README.md  main.cpp
tp/borrar/: README.md  borrar.cpp  borrar_bottom_up.cpp  borrar_bt.cpp
tp/l_lindo/: CMakeLists.txt  README.md  main.cpp
tp/maquina_misteriosa/: README.md  maquina_misteriosa.cpp
tp/viaje_intergalactico/: README.md  viaje_intergalactico.cpp
